--- a/src/App.css
+++ b/src/App.css
@@ -69,7 +69,10 @@ h1 {
   font-family: 'Roboto Condensed', sans-serif;
 }
 
+/* MAP SECTION */
 
-
-
+.mapid { 
+  width: 100%;
+  height: 50vh; 
+}
 
