--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,7 @@ input {
   justify-content: center;
 }
 
+
 /* Header Section */
 button,
 input,
@@ -140,8 +141,14 @@ li:active {
   background-color: yellow;
 }
 
+/* Map Styles */
 .mapid { 
   width: 100%;
   height: 50vh; 
+}
+
+.mapClass {
+  border: 1px solid black;
+  width: 50%;
 }
 
