--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600,800;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,800;1,400;1,600&display=swap');
 
 
 html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}
@@ -28,6 +26,7 @@ input {
   max-width: 1400px;
   width: 80%;
   background-color: white;
+
 }
 
 .sectionWrapper {
@@ -40,12 +39,23 @@ input {
   justify-content: center;
 }
 
+.flexApp {
+  display: flex;
+  width: 100%;
+  align-items: space-between;
+  margin: 60px auto;
+}
 
 /* Header Section */
 button,
 input,
 h1 {
   font-weight: 800;
+}
+
+p {
+  font-size: .9rem;
+  line-height: 1.5;
 }
 
 h1 {
@@ -59,10 +69,13 @@ h2 {
 }
 
 .heading p {
-  line-height: 1.3;
-  margin-bottom: 40px;
+  margin-bottom: 60px;
+  text-align: center;
+  font-size: 1.2rem;
 }
 
+
+/* Form Styles */
 
 button,
 input {
@@ -116,19 +129,24 @@ input:focus {
 }
 
 
-/* MAP SECTION */
+/* List of Places Styles */
+.listOfPlaces {
+  display: flex;
+  flex-direction: column;
+  width: 45%;
+}
 
 ul {
-  width: 45%;
   padding-left: 0;
 }
 
 li {
   list-style-type: none;
-  display: inline-block;
+  display: block;
   padding: 5px 10px;
   line-height: 1.5;
-  font-weight: 600;
+  font-weight: 800;
+  font-size: .9rem;
 }
 
 li:hover,
@@ -140,15 +158,51 @@ li:focus {
 li:active {
   background-color: yellow;
 }
+/* Directions Styles */
+.directionsClass {
+  width: 45%;
+}
+
+/* Error message*/
+.loserClass {
+  font-style: italic;
+}
 
 /* Map Styles */
 .mapid { 
   width: 100%;
-  height: 50vh; 
+  height: 70vh;
 }
 
 .mapClass {
   border: 1px solid black;
-  width: 50%;
+  width: 70%;
+  height: 70vh;
+  margin-left: 40px;
 }
 
+/* Footer Styles */
+
+footer {
+  background-color: black;
+  height: 100px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+footer a {
+  color: white;
+  text-decoration: none;
+  
+}
+
+.emptyDiv {
+  height: 40vh;
+}
+
+@media (max-width: 1000px) {
+
+}
