--- a/src/App.css
+++ b/src/App.css
@@ -169,15 +169,18 @@ li:active {
 }
 
 /* Map Styles */
+.mapClass,
+.mapid {
+  height: 70vh;
+}
+
 .mapid { 
   width: 100%;
-  height: 70vh;
 }
 
 .mapClass {
   border: 1px solid black;
   width: 70%;
-  height: 70vh;
   margin-left: 40px;
 }
 
@@ -203,6 +206,28 @@ footer a {
   height: 40vh;
 }
 
-@media (max-width: 1000px) {
+/* Media Queries */
 
+@media (max-width: 900px) {
+  h2 {
+    font-size: 1.25rem;
+  }
+  input,
+  button {
+    font-size: .8rem;
+  }
+  .heading p {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 725) {
+  li,
+  p {
+    font-size: .8rem;
+  }
+
+  .mapClass {
+    width: 100%;
+  }
 }
