--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@ input {
   display: flex;
   flex-direction: row;
   width: 100%;
-  align-items: space-between;
+  justify-content: space-between;
   margin: 60px auto;
 }
 
